[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Ubuntu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Bitter-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/main_settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="main_settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 18.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 50
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="VBoxContainer" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 842.0
margin_bottom = 550.0
custom_constants/separation = 40

[node name="title" type="Label" parent="settings"]
margin_left = 225.0
margin_right = 416.0
margin_bottom = 58.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="sections" type="TabContainer" parent="settings"]
margin_top = 98.0
margin_right = 642.0
margin_bottom = 417.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="GridContainer" parent="settings/sections"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/hseparation = 50
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="artist_label" type="Label" parent="settings/sections/audio"]
margin_right = 84.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Artist"

[node name="track_label" type="Label" parent="settings/sections/audio"]
margin_left = 134.0
margin_right = 213.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Track"

[node name="license_label" type="Label" parent="settings/sections/audio"]
margin_left = 263.0
margin_right = 396.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "License"

[node name="spacer" type="Control" parent="settings/sections/audio"]
margin_left = 446.0
margin_right = 634.0
margin_bottom = 37.0

[node name="artist_name" type="Label" parent="settings/sections/audio"]
margin_top = 52.0
margin_right = 84.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "Rolemusic"

[node name="track_name" type="Label" parent="settings/sections/audio"]
margin_left = 134.0
margin_top = 52.0
margin_right = 213.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "The River"

[node name="license_name" type="Label" parent="settings/sections/audio"]
margin_left = 263.0
margin_top = 52.0
margin_right = 396.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "CC BY-NC-SA 3.0"

[node name="select_track" type="Button" parent="settings/sections/audio"]
margin_left = 446.0
margin_top = 41.0
margin_right = 634.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Select Track"

[node name="back" type="Button" parent="settings"]
margin_left = 280.0
margin_top = 457.0
margin_right = 362.0
margin_bottom = 500.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="track_selector" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 842.0
margin_bottom = 550.0
window_title = "Open a File"
mode = 0
[connection signal="pressed" from="settings/sections/audio/select_track" to="." method="_on_select_track_pressed"]
[connection signal="pressed" from="settings/back" to="." method="_on_back_pressed"]
[connection signal="file_selected" from="track_selector" to="." method="_on_track_selector_file_selected"]
